Fix color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1013,3 +1013,7 @@ hr {
 .d-none {
   display: none;
 }
+
+.ptags {
+  display: none !important;
+}
